finished post page

--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@prismicio/helpers": "^2.2.1",
     "@prismicio/next": "^0.1.0",
     "@prismicio/react": "^2.1.2",
+    "@prismicio/richtext": "^2.0.1",
     "@prismicio/slice-simulator-react": "^0.2.0",
     "@stripe/stripe-js": "^1.24.0",
     "axios": "^0.26.1",
     "faunadb": "^4.5.2",
     "next": "12.1.0",
     "next-auth": "^4.2.1",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "rich-text": "^4.1.0",
     "sass": "^1.49.9",
     "stripe": "^8.207.0"
   },
