--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@prismicio/helpers": "^2.2.1",
     "@prismicio/next": "^0.1.0",
     "@prismicio/react": "^2.1.2",
-    "@prismicio/richtext": "^2.0.1",
-    "@prismicio/slice-simulator-react": "^0.2.0",
+    "@prismicio/richtext": "^2.0.1",    
     "@stripe/stripe-js": "^1.24.0",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
     "axios": "^0.26.1",
     "faunadb": "^4.5.2",
     "next": "12.1.0",
@@ -35,6 +36,7 @@
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "slice-machine-ui": "^0.3.3",
+    "@prismicio/slice-simulator-react": "^0.2.0",
     "typescript": "^4.6.2"
   }
 }
